# ivs-project-2-team-calculator

./: .editorconfig  .gitignore  Organizace projektu.md  Plán projektu.md  README.md  hodnoceni.txt  skutecnost.txt
.github/: codecov.yml
.github/workflows/: c-cpp_ci_build_and_test.yml
doc/resources/: title_page.md
info/: 01 .gitconfig  02 GitHub Student Developer Pack (návod).md  03 Zadání projektu.md  04 Plán projektu.md  05 Debugging ve VS Code.md  README.md
install/: calm-catcalc_1.0_amd64.deb  stddev_1.0_amd64.deb
install/deb-resources/: control-catcalc  control-stddev  copyright  install-catcalc  install-stddev  postrm-catcalc.ex  preinst-catcalc.ex  preinst-stddev.ex  readme-catcalc  readme-stddev  rules-catcalc  rules-stddev
install/deb-resources/install_catcalc/: calm-catcalc.desktop  calm-catcalc.xpm  catcalc.desktop
install/deb-resources/install_stddev/: stddev.desktop  stddev.xpm
plan/: Plán projektu.md
src/: Doxyfile  Makefile
src/CalmCatCalc/cat_calc_gui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/CalmCatCalc/core/: cat_calc_core.cpp  cat_calc_core.h
src/CalmCatCalc/gui/calc-gui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/profiler/: stddev.cpp  stddev.h
src/tests/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  CatCalcTests.cpp  Makefile  cat_calc_core_tests.cpp  cat_calc_core_tests_for_debug.cpp  cmake_install.cmake  stddev_tests.sh
